--- a/.github/workflows/mpaint_build.yml
+++ b/.github/workflows/mpaint_build.yml
@@ -100,7 +100,7 @@ jobs:
     - name: build standalone
       id: build-standalone
       run: |
-        python3 build.py "${{ env.PLUG }}" release standalone
+        python3 build.py "${{ env.PLUG }}" release standalone no
 
     - name: installer
       id: installer
