--- a/.github/workflows/pisstortion_build.yml
+++ b/.github/workflows/pisstortion_build.yml
@@ -90,12 +90,12 @@ jobs:
     - name: build clap
       id: build-clap
       run: |
-        python3 build.py "${{ env.PLUG }}" release clap
+        sudo python3 build.py "${{ env.PLUG }}" release clap
 
     - name: build vst3
       id: build-vst3
       run: |
-        python3 build.py "${{ env.PLUG }}" release vst3
+        sudo python3 build.py "${{ env.PLUG }}" release vst3
 
     - name: installer
       id: installer
@@ -122,12 +122,12 @@ jobs:
     - name: build clap free
       id: build-clap-free
       run: |
-        python3 build.py "${{ env.PLUG }}" release clap
+        sudo python3 build.py "${{ env.PLUG }}" release clap
 
     - name: build vst3 free
       id: build-vst3-free
       run: |
-        python3 build.py "${{ env.PLUG }}" release vst3
+        sudo python3 build.py "${{ env.PLUG }}" release vst3
 
     - name: installer free
       id: installer-free
