--- a/.github/workflows/proto_build.yml
+++ b/.github/workflows/proto_build.yml
@@ -90,12 +90,12 @@ jobs:
     - name: build clap
       id: build-clap
       run: |
-        python3 build.py "${{ env.PLUG }}" release clap
+        sudo python3 build.py "${{ env.PLUG }}" release clap
 
     - name: build vst3
       id: build-vst3
       run: |
-        python3 build.py "${{ env.PLUG }}" release vst3
+        sudo python3 build.py "${{ env.PLUG }}" release vst3
 
     - name: installer
       id: installer
