--- a/.github/workflows/proto_build.yml
+++ b/.github/workflows/proto_build.yml
@@ -85,17 +85,17 @@ jobs:
       id: build-au
       if: startsWith(matrix.os, 'mac')
       run: |
-        sudo python3 build.py "${{ env.PLUG }}" release au
+        python3 build.py "${{ env.PLUG }}" release au
 
     - name: build clap
       id: build-clap
       run: |
-        sudo python3 build.py "${{ env.PLUG }}" release clap
+        python3 build.py "${{ env.PLUG }}" release clap
 
     - name: build vst3
       id: build-vst3
       run: |
-        sudo python3 build.py "${{ env.PLUG }}" release vst3
+        python3 build.py "${{ env.PLUG }}" release vst3
 
     - name: installer
       id: installer
