--- a/.github/workflows/vu_build.yml
+++ b/.github/workflows/vu_build.yml
@@ -85,22 +85,22 @@ jobs:
       id: build-au
       if: startsWith(matrix.os, 'mac')
       run: |
-        sudo python3 build.py "${{ env.PLUG }}" release au
+        python3 build.py "${{ env.PLUG }}" release au
 
     - name: build clap
       id: build-clap
       run: |
-        sudo python3 build.py "${{ env.PLUG }}" release clap
+        python3 build.py "${{ env.PLUG }}" release clap
 
     - name: build vst3
       id: build-vst3
       run: |
-        sudo python3 build.py "${{ env.PLUG }}" release vst3
+        python3 build.py "${{ env.PLUG }}" release vst3
 
     - name: build standalone
       id: build-standalone
       run: |
-        sudo python3 build.py "${{ env.PLUG }}" release standalone no
+        python3 build.py "${{ env.PLUG }}" release standalone no
 
     - name: installer
       id: installer
@@ -122,22 +122,22 @@ jobs:
       id: build-au-free
       if: startsWith(matrix.os, 'mac')
       run: |
-        sudo python3 build.py "${{ env.PLUG }}" release au
+        python3 build.py "${{ env.PLUG }}" release au
 
     - name: build clap free
       id: build-clap-free
       run: |
-        sudo python3 build.py "${{ env.PLUG }}" release clap
+        python3 build.py "${{ env.PLUG }}" release clap
 
     - name: build vst3 free
       id: build-vst3-free
       run: |
-        sudo python3 build.py "${{ env.PLUG }}" release vst3
+        python3 build.py "${{ env.PLUG }}" release vst3
 
     - name: build standalone free
       id: build-standalone-free
       run: |
-        sudo python3 build.py "${{ env.PLUG }}" release standalone no
+        python3 build.py "${{ env.PLUG }}" release standalone no
 
     - name: installer free
       id: installer-free
