(system) updated company_email plugin metadata

--- a/plugins/vu/CMakeLists.txt
+++ b/plugins/vu/CMakeLists.txt
@@ -4,7 +4,7 @@ set(BaseTargetName VU)
 juce_add_plugin("${BaseTargetName}"
 	COMPANY_NAME "unplugred"
 	COMPANY_WEBSITE "https://vst.unplug.red"
-	COMPANY_EMAIL "arihanan@proton.me"
+	COMPANY_EMAIL "melody@unplug.red"
 	FORMATS Standalone VST3 AU
 	IS_SYNTH FALSE
 	NEEDS_MIDI_INPUT FALSE
