(system) renamed VST3_CATEGORY to VST3_CATEGORIES

--- a/plugins/crmbl/CMakeLists.txt
+++ b/plugins/crmbl/CMakeLists.txt
@@ -14,7 +14,7 @@ juce_add_plugin("${BaseTargetName}"
 	DESCRIPTION "Delay for insane people."
 	PLUGIN_MANUFACTURER_CODE Ured
 	PLUGIN_CODE Crmb
-	VST3_CATEGORY Delay
+	VST3_CATEGORIES Delay
 	VST2_CATEGORY kPlugCategEffect
 	AU_MAIN_TYPE kAudioUnitType_Effect
 	COPY_PLUGIN_AFTER_BUILD TRUE
