--- a/plugins/pnch/CMakeLists.txt
+++ b/plugins/pnch/CMakeLists.txt
@@ -14,7 +14,7 @@ juce_add_plugin("${BaseTargetName}"
 	DESCRIPTION "Weird knob that makes ur stuff tight."
 	PLUGIN_MANUFACTURER_CODE Ured
 	PLUGIN_CODE Pnch
-	VST3_CATEGORY Distortion
+	VST3_CATEGORIES Distortion
 	VST2_CATEGORY kPlugCategEffect
 	AU_MAIN_TYPE kAudioUnitType_Effect
 	COPY_PLUGIN_AFTER_BUILD TRUE
