--- a/plugins/sunburnt/CMakeLists.txt
+++ b/plugins/sunburnt/CMakeLists.txt
@@ -14,7 +14,7 @@ juce_add_plugin("${BaseTargetName}"
 	DESCRIPTION "Multi-curve reverb delay."
 	PLUGIN_MANUFACTURER_CODE Ured
 	PLUGIN_CODE Snbt
-	VST3_CATEGORY Reverb
+	VST3_CATEGORIES Reverb
 	VST2_CATEGORY kPlugCategEffect
 	AU_MAIN_TYPE kAudioUnitType_Effect
 	COPY_PLUGIN_AFTER_BUILD TRUE
