--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(crmbl)
 add_subdirectory(prisma)
 add_subdirectory(sunburnt)
 add_subdirectory(dietaudio)
+add_subdirectory(scope)
