--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(prisma)
 add_subdirectory(sunburnt)
 add_subdirectory(dietaudio)
 add_subdirectory(scope)
+add_subdirectory(tripled)
